Added Login page UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+    font-size: 16px;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    background-color: #191919;
+}
+
+.login__poster {
+    background-image: url('https://m.media-amazon.com/images/M/MV5BOTY5NzQxYzItNGRmNy00NDQ4LTljMjAtMjFkM2M0Y2IwYTRhXkEyXkFqcGdeQXVyNzEyNjUwMTA@._V1_.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: 100% 100%;
 }
