--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,15 @@ body {
 ::-webkit-scrollbar-track {
     background-color: var(--scrollbar-track-color);
 }
+
+.logo-spinner {
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    } to {
+        transform: rotate(360deg);
+    }
+}
